typo and packagejson changes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hassane24.github.io/",
+  "homepage": "/",
   "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
