fixing react router

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "/",
+  "homepage": "https://hassane24.github.io/Shopping-Cart",
   "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
